--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>mntn</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <!--font-family: "Chivo", sans-serif; font-family: "Chonburi", serif;
+    <!-- font-family: "Chonburi", serif;
     font-family: "Cinzel", serif;-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,28 +19,34 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/reser.css" />
+    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
   </head>
   <body>
     <header class="header">
-      <div class="header-container"></div>
-      <a class="logo" href="index.html">mntn</a>
-      <nav>
-        <div class="header-nav">
-          <ul class="nav-list">
-            <li class="nav-item"><a href="#"></a>Equipment</li>
-            <li class="nav-item"><a href="#"></a>About us</li>
-            <li class="nav-item"><a href="#"></a>Blog</li>
-          </ul>
+      <div class="header-container">
+        <a class="logo" href="index.html">mntn</a>
+        <nav>
+          <div class="header-nav">
+            <ul class="nav-list">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Equipment</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About us</a>
+              </li>
+              <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
+            </ul>
+          </div>
+        </nav>
+        <div class="header-actions">
+          <a href="#" class="action-link">Account</a>
         </div>
-      </nav>
-      <div class="header-actions">
-        <a href="#" class="action-link">Account</a>
       </div>
     </header>
     <main class="main">
       <section class="hero">
-        <div class="contain">
+        <div class="container hero-container">
           <p class="hero-text">A Hiking guide</p>
           <h1 class="hero-title">Be prepared for the Mountains and beyond!</h1>
           <a href="#travel" class="hero-link">scroll down</a>
@@ -53,7 +59,7 @@
             <article class="travel-step">
               <div class="step-body">
                 <p class="step-text">GEt Started</p>
-                <h3 class="step-tititle">What level of hiker are you?</h3>
+                <h3 class="step-title">What level of hiker are you?</h3>
                 <p class="step-deskription">
                   Determining what level of hiker you are can be an important
                   tool when planning future hikes. This hiking level guide will
@@ -75,7 +81,7 @@
             <article class="travel-step">
               <div class="step-body">
                 <p class="step-text">Hiking Essentials</p>
-                <h3 class="step-tititle">Picking the right Hiking Gear!</h3>
+                <h3 class="step-title">Picking the right Hiking Gear!</h3>
                 <p class="step-deskription">
                   The nice thing about beginning hiking is that you don’t really
                   need any special gear, you can probably get away with things
@@ -96,7 +102,7 @@
             <article class="travel-step">
               <div class="step-body">
                 <p class="step-text">where you go is the key</p>
-                <h3 class="step-tititle">Understand Your Map & Timing</h3>
+                <h3 class="step-title">Understand Your Map & Timing</h3>
                 <p class="step-deskription">
                   To start, print out the hiking guide and map. If it’s raining,
                   throw them in a Zip-Lock bag. Read over the guide, study the
@@ -120,9 +126,9 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <div class="footer-info">
-          <a class="logo" href="index.html">mntn</a>
+          <a class="logo footer-logo" href="index.html">mntn</a>
           <p class="footer-info-text">
             Get out there & discover your next slope, mountain & destination!
           </p>
@@ -151,16 +157,16 @@
           </ul>
         </div>
         <div class="footer-mntn">
-          <h2 class="mntn">More on MNTN</h2>
-          <ul class="mntn">
-            <li class="mntn">
-              <a href="#" class="mntn">The Team </a>
+          <h2 class="mntn-title">More on MNTN</h2>
+          <ul class="mntn-list">
+            <li class="mntn-item">
+              <a href="#" class="mntn-link">The Team </a>
             </li>
-            <li class="mntn">
-              <a href="#" class="mntn"> Jobs</a>
+            <li class="mntn-item">
+              <a href="#" class="mntn-link"> Jobs</a>
             </li>
-            <li class="mntn">
-              <a href="#" class="mntn">Press </a>
+            <li class="mntn-item">
+              <a href="#" class="mntn-link">Press </a>
             </li>
           </ul>
         </div>
